# mino

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
generate/: calle.c  calle.h  env.c  env.h  main.c  templater.h
src/: main.c  main.lua  mino.lua  my_function.lua  test.lua  tests.lua  torch_lua_example.lua
src/activations/: activations.lua  relu.lua  softmax.lua
src/defc/: defc.h
src/files/: csv.c  csv.h
src/layers/: layers.lua  linear.lua
src/loss/: categoricalcrossentropy.lua  cross_entropy.lua  loss.lua
src/macros/: error.h
src/mat/: mat.c  mat.h
src/matrix/: matrix.c  matrix.h  matrix.lua
src/matrix/kernels/: multiplication.lua  subtraction.lua
src/mino/: mino.lua
src/mino/activations/: relu.lua  softmax.lua
src/mino/error_handling/: error_handling.lua
src/mino/layers/: linear.lua
src/mino/loss/: cross_entropy.lua
src/mino/matrix/: matrix.lua
src/mino/optimisers/: sgd.lua  sgd_momentum.lua  utils.lua
src/mino/utils/: mino_random.lua  utils.lua
src/temp/: mino.lua
src/temp/activations/: activations.lua  relu.lua
src/temp/error_handling/: error_handling.lua
src/temp/layers/: linear.lua
src/temp/loss/: cross_entropy.lua
src/temp/matrix/: matrix.lua
src/temp/utils/: utils.lua
src/test/: pytorch_python_example.py
src/utils/: progress_bar.lua  utils.lua
src/utils/datasets/: mnist_dataset.lua
temp/: Makefile  generator  main
temp/generate/: calle.c  env.c  env.h  main.c  templater.c
temp/src/: main.c
temp/src/macros/: error.h
tests/1. lua_naive/: matrix_check.txt  matrix_check2.txt
(+10 files in other folders)
